--- a/css/product.css
+++ b/css/product.css
@@ -37,10 +37,37 @@
 
 
 
+.swiper.droneAdvSwiper {
+    width: 100%;
+    height: 282px;
+    margin: 28px auto;
+}
+
+.swiper.droneAdvSwiper .swiper-slide {
+    background: none;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
 
 
-
-
+.droneAdv-item-sw {
+    background: #000;
+    -webkit-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    -moz-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+}
 
 
 
@@ -60,4 +87,19 @@
 
 
 
-@media only screen and (max-width: 420px) {}
+@media only screen and (max-width: 420px) {
+
+    .swiper.droneAdvSwiper .swiper-horizontal>.swiper-pagination-bullets,
+    .swiper.droneAdvSwiper .swiper-pagination-bullets.swiper-pagination-horizontal,
+    .swiper.droneAdvSwiper .swiper-pagination-custom,
+    .swiper.droneAdvSwiper .swiper-pagination-fraction {
+        bottom: 10px !important;
+    }
+
+    .swiper.droneAdvSwiper .swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
+    .swiper.droneAdvSwiper .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+        left: 50%;
+        transform: translateX(-50%);
+        white-space: nowrap;
+    }
+}
