--- a/css/output.css
+++ b/css/output.css
@@ -837,6 +837,14 @@ html {
   margin-left: 2.75rem;
 }
 
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
+.ml-\[9\%\] {
+  margin-left: 9%;
+}
+
 .mb-11 {
   margin-bottom: 2.75rem;
 }
@@ -851,6 +859,10 @@ html {
 
 .mt-14 {
   margin-top: 3.5rem;
+}
+
+.mt-\[10px\] {
+  margin-top: 10px;
 }
 
 .box-border {
@@ -965,6 +977,10 @@ html {
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.w-\[84\%\] {
+  width: 84%;
 }
 
 .max-w-full {
@@ -1083,6 +1099,10 @@ html {
   flex-basis: 23%;
 }
 
+.basis-\[84\%\] {
+  flex-basis: 84%;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1165,6 +1185,10 @@ html {
 
 .border-\[0\.5px\] {
   border-width: 0.5px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-y-0 {
@@ -1358,6 +1382,16 @@ html {
   padding-bottom: 1rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1451,8 +1485,20 @@ html {
   padding-bottom: 7rem;
 }
 
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .text-left {
   text-align: left;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -1582,6 +1628,10 @@ html {
 
 .leading-\[48px\] {
   line-height: 48px;
+}
+
+.leading-\[60px\] {
+  line-height: 60px;
 }
 
 .text-white {
@@ -2172,6 +2222,10 @@ html {
   .md\:leading-5 {
     line-height: 1.25rem;
   }
+
+  .md\:leading-10 {
+    line-height: 2.5rem;
+  }
 }
 
 @media (max-width: 500px) {
@@ -2269,12 +2323,16 @@ html {
     margin-top: 1.5rem;
   }
 
-  .ss\:mt-0 {
-    margin-top: 0px;
-  }
-
   .ss\:mb-6 {
     margin-bottom: 1.5rem;
+  }
+
+  .ss\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .ss\:mt-0 {
+    margin-top: 0px;
   }
 
   .ss\:mb-1 {
