--- a/css/product.css
+++ b/css/product.css
@@ -69,8 +69,164 @@
     box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
 }
 
+.drone-items {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1e1d1d;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.drone-items::before {
+    content: '';
+    position: absolute;
+    width: 200px;
+    height: 160%;
+    background: linear-gradient(#12a0ff, #00d100);
+    animation: box 4s linear infinite;
+    display: none;
+}
+
+.drone-items:hover {
+    transition: all 0.4s;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.drone-items:hover::before {
+    display: block;
+}
+
+.drone-items:hover .drone-item {
+    background-color: #000;
+}
+
+.drone-items:hover .p-name {
+    color: #02E502;
+}
+
+.drone-items:hover .p-price {
+    color: #fbff00;
+}
+
+.drone-item {
+    z-index: 10;
+}
 
 
+
+
+
+
+
+/* about section */
+.about-drone-img {
+    border-color: rgb(0, 255, 13);
+    border-radius: 260px;
+    -webkit-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    -moz-box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+    box-shadow: 4px 4px 8px 2px rgba(26, 255, 0, 0.2);
+}
+
+
+
+
+
+
+/* Character Section */
+.character-item {
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    transition: all 0.6s;
+}
+
+.sub-menu {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1.4s;
+}
+
+.character-item.active .sub-menu {
+    max-height: 300px;
+}
+
+.character-item.active h3 {
+    color: #02E502;
+    transition: all 0.6s;
+}
+
+.plus-icon {
+    position: relative;
+    bottom: 14px;
+}
+
+.plus-icon::before,
+.plus-icon::after {
+    position: absolute;
+    width: 5px;
+    height: 20px;
+    display: block;
+    content: '';
+    background: #02E502;
+}
+
+.plus-icon::before {
+    transform: rotate(0deg);
+    left: 0px;
+    top: 20px;
+    transition: all 1s;
+}
+
+.plus-icon::after {
+    transform: rotate(90deg);
+    left: 0;
+    top: 20px;
+    transition: all 1s;
+}
+
+.character-item.active .plus-icon::before {
+    background: #e50a02;
+    transform: rotate(90deg);
+    transition: all 1s;
+}
+
+.character-item.active .plus-icon::after {
+    background: #e50202;
+    transform: rotate(-450deg);
+    transition: all 1s;
+}
+
+
+
+
+
+/* Similar section */
+
+.swiper.myproductSwiper {
+    width: 100%;
+}
+
+.swiper.myproductSwiper .swiper-slide {
+
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
 
 @media only screen and (max-width: 1250px) {}
 
