--- a/css/product.css
+++ b/css/product.css
@@ -234,7 +234,14 @@
 @media only screen and (max-width: 990px) {}
 
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+
+    .plus-icon::before,
+    .plus-icon::after {
+        width: 3px;
+        height: 15px;
+    }
+}
 
 
 
@@ -244,6 +251,13 @@
 
 
 @media only screen and (max-width: 420px) {
+
+    .plus-icon::before,
+    .plus-icon::after {
+        width: 2.5px;
+        height: 13px;
+    }
+
 
     .swiper.droneAdvSwiper .swiper-horizontal>.swiper-pagination-bullets,
     .swiper.droneAdvSwiper .swiper-pagination-bullets.swiper-pagination-horizontal,
