--- a/css/style.css
+++ b/css/style.css
@@ -275,10 +275,21 @@ body {
 
 /* Advantage section */
 
-.advantage {
+.adv-bg {
+    position: relative;
+}
+
+.adv-bg::after {
     background-image: url(../img/main/bg-dron.png);
     background-repeat: no-repeat;
-    background-position: top right;
+    background-size: cover;
+    display: block;
+    content: '';
+    position: absolute;
+    width: 265px;
+    height: 265px;
+    right: -54px;
+    top: -126px;
 }
 
 .adv-style {
@@ -322,16 +333,27 @@ body {
 
 
 /*Product Section */
-.product {
+.product-bg {
+    position: relative;
+}
+
+.product-bg::after {
     background-image: url(../img/main/product-bg.png);
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-size: cover;
+    display: block;
+    content: '';
+    position: absolute;
+    width: 820px;
+    height: 760px;
+    right: -246px;
+    top: -38px;
 }
 
 .p-items {
     position: relative;
-    width: 350px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -354,6 +376,14 @@ body {
     transform: scale(1.1);
     transition: all 0.4s;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.p-items:hover .p-name {
+    color: #02E502;
+}
+
+.p-items:hover .p-price {
+    color: #e5ff00;
 }
 
 .p-items:hover::before {
@@ -712,7 +742,7 @@ body {
         left: 7px;
     }
 
-    .advantage {
+    .adv-bg::after {
         background: none;
     }
 
