--- a/css/output.css
+++ b/css/output.css
@@ -526,6 +526,10 @@ html {
   max-width: 1195px;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -546,6 +550,30 @@ html {
   bottom: 1.25rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-44 {
+  top: 11rem;
+}
+
+.top-7 {
+  top: 1.75rem;
+}
+
+.left-\[-2px\] {
+  left: -2px;
+}
+
+.top-36 {
+  top: 9rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -556,6 +584,10 @@ html {
 
 .-z-10 {
   z-index: -10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .m-0 {
@@ -785,6 +817,34 @@ html {
   margin-left: 1rem;
 }
 
+.mt-\[10\%\] {
+  margin-top: 10%;
+}
+
+.mr-\[4\%\] {
+  margin-right: 4%;
+}
+
+.mr-\[6\%\] {
+  margin-right: 6%;
+}
+
+.mr-\[5\%\] {
+  margin-right: 5%;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
+.mr-\[6px\] {
+  margin-right: 6px;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -801,10 +861,6 @@ html {
   margin-bottom: 70px;
 }
 
-.mr-7 {
-  margin-right: 1.75rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
@@ -819,10 +875,6 @@ html {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mr-\[6px\] {
-  margin-right: 6px;
 }
 
 .mr-10 {
@@ -861,8 +913,8 @@ html {
   margin-left: 1.75rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.mr-\[10\%\] {
+  margin-right: 10%;
 }
 
 .box-border {
@@ -909,6 +961,14 @@ html {
   height: 40px;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-\[151px\] {
+  height: 151px;
+}
+
 .h-\[98\%\] {
   height: 98%;
 }
@@ -920,6 +980,20 @@ html {
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 
 .w-\[280px\] {
@@ -966,6 +1040,19 @@ html {
   width: 30%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[225px\] {
+  width: 225px;
+}
+
+.w-\[122px\] {
+  width: 122px;
+}
+
 .w-\[98\%\] {
   width: 98%;
 }
@@ -978,13 +1065,20 @@ html {
   width: 105px;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-\[84\%\] {
   width: 84%;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[46px\] {
+  width: 46px;
+}
+
+.min-w-\[100\%\] {
+  min-width: 100%;
 }
 
 .max-w-full {
@@ -1118,10 +1212,6 @@ html {
 
 .basis-\[84\%\] {
   flex-basis: 84%;
-}
-
-.basis-\[42\%\] {
-  flex-basis: 42%;
 }
 
 .cursor-pointer {
@@ -1291,6 +1381,10 @@ html {
   background-color: rgb(30 29 29 / var(--tw-bg-opacity));
 }
 
+.bg-korzinabg {
+  background-color: rgba(24, 24, 24, 0.7);
+}
+
 .bg-lightgreen {
   --tw-bg-opacity: 1;
   background-color: rgb(2 229 2 / var(--tw-bg-opacity));
@@ -1383,6 +1477,31 @@ html {
   padding-bottom: 3.5rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-\[2\%\] {
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.px-\[3\%\] {
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -1398,19 +1517,9 @@ html {
   padding-bottom: 0.25rem;
 }
 
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .px-10 {
@@ -1463,16 +1572,20 @@ html {
   padding-top: 2rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.pt-\[4\%\] {
+  padding-top: 4%;
 }
 
-.pl-28 {
-  padding-left: 7rem;
+.pb-\[5\%\] {
+  padding-bottom: 5%;
 }
 
-.pr-36 {
-  padding-right: 9rem;
+.pl-\[7\%\] {
+  padding-left: 7%;
+}
+
+.pr-\[12\%\] {
+  padding-right: 12%;
 }
 
 .pr-\[260px\] {
@@ -1531,22 +1644,6 @@ html {
   padding-bottom: 7rem;
 }
 
-.pt-\[4\%\] {
-  padding-top: 4%;
-}
-
-.pb-\[5\%\] {
-  padding-bottom: 5%;
-}
-
-.pl-\[7\%\] {
-  padding-left: 7%;
-}
-
-.pr-\[12\%\] {
-  padding-right: 12%;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1603,17 +1700,17 @@ html {
   line-height: 1.5rem;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
 .text-\[34px\] {
   font-size: 34px;
 }
 
 .text-\[30px\] {
   font-size: 30px;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .text-\[28px\] {
@@ -1668,20 +1765,24 @@ html {
   line-height: 62px;
 }
 
-.leading-\[54px\] {
-  line-height: 54px;
+.leading-\[57px\] {
+  line-height: 57px;
 }
 
-.leading-\[31px\] {
-  line-height: 31px;
+.leading-\[26px\] {
+  line-height: 26px;
 }
 
 .leading-\[30px\] {
   line-height: 30px;
 }
 
-.leading-\[26px\] {
-  line-height: 26px;
+.leading-\[54px\] {
+  line-height: 54px;
+}
+
+.leading-\[31px\] {
+  line-height: 31px;
 }
 
 .leading-\[48px\] {
@@ -1732,6 +1833,12 @@ html {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-\[0\.5s\] {
   transition-property: 0.5s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1744,18 +1851,8 @@ html {
   transition-duration: 150ms;
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .hover\:rounded-xl:hover {
   border-radius: 0.75rem;
-}
-
-.hover\:rounded-lg:hover {
-  border-radius: 0.5rem;
 }
 
 .hover\:border-lightgreen:hover {
@@ -1776,10 +1873,6 @@ html {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:font-bold:hover {
-  font-weight: 700;
 }
 
 .hover\:text-lightgreen:hover {
@@ -1849,6 +1942,10 @@ html {
     margin-right: auto;
   }
 
+  .lg\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .lg\:ml-5 {
     margin-left: 1.25rem;
   }
@@ -1871,10 +1968,6 @@ html {
 
   .lg\:ml-\[12\%\] {
     margin-left: 12%;
-  }
-
-  .lg\:mb-16 {
-    margin-bottom: 4rem;
   }
 
   .lg\:block {
@@ -1922,14 +2015,14 @@ html {
     padding-bottom: 0px;
   }
 
-  .lg\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
   }
 
   .lg\:pt-24 {
@@ -1944,6 +2037,10 @@ html {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-\[52px\] {
+    font-size: 52px;
   }
 
   .lg\:text-\[22px\] {
@@ -1965,20 +2062,16 @@ html {
     line-height: 1;
   }
 
-  .lg\:text-\[52px\] {
-    font-size: 52px;
-  }
-
   .lg\:leading-4 {
     line-height: 1rem;
   }
 
-  .lg\:leading-5 {
-    line-height: 1.25rem;
-  }
-
   .lg\:leading-\[42px\] {
     line-height: 42px;
+  }
+
+  .lg\:leading-5 {
+    line-height: 1.25rem;
   }
 }
 
@@ -1995,8 +2088,13 @@ html {
     top: 2rem;
   }
 
-  .md\:order-1 {
-    order: 1;
+  .md\:top-36 {
+    top: 9rem;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .md\:my-12 {
@@ -2007,11 +2105,6 @@ html {
   .md\:mx-7 {
     margin-left: 1.75rem;
     margin-right: 1.75rem;
-  }
-
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .md\:mr-4 {
@@ -2126,6 +2219,14 @@ html {
     margin-top: 1rem;
   }
 
+  .md\:mt-\[16\%\] {
+    margin-top: 16%;
+  }
+
+  .md\:mr-\[3\%\] {
+    margin-right: 3%;
+  }
+
   .md\:block {
     display: block;
   }
@@ -2136,6 +2237,10 @@ html {
 
   .md\:h-8 {
     height: 2rem;
+  }
+
+  .md\:h-auto {
+    height: auto;
   }
 
   .md\:w-8 {
@@ -2160,6 +2265,18 @@ html {
 
   .md\:w-\[95\%\] {
     width: 95%;
+  }
+
+  .md\:w-\[30px\] {
+    width: 30px;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:w-\[46px\] {
+    width: 46px;
   }
 
   .md\:max-w-\[338px\] {
@@ -2194,6 +2311,10 @@ html {
     flex-basis: 48%;
   }
 
+  .md\:basis-\[70\%\] {
+    flex-basis: 70%;
+  }
+
   .md\:basis-\[100\%\] {
     flex-basis: 100%;
   }
@@ -2204,18 +2325,6 @@ html {
 
   .md\:basis-\[95\%\] {
     flex-basis: 95%;
-  }
-
-  .md\:basis-\[90\%\] {
-    flex-basis: 90%;
-  }
-
-  .md\:basis-\[68\%\] {
-    flex-basis: 68%;
-  }
-
-  .md\:basis-\[70\%\] {
-    flex-basis: 70%;
   }
 
   .md\:flex-col {
@@ -2273,6 +2382,16 @@ html {
     padding-right: 3rem;
   }
 
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
   .md\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -2305,18 +2424,6 @@ html {
     padding-top: 6rem;
   }
 
-  .md\:pt-28 {
-    padding-top: 7rem;
-  }
-
-  .md\:pr-0 {
-    padding-right: 0px;
-  }
-
-  .md\:pt-\[72px\] {
-    padding-top: 72px;
-  }
-
   .md\:pt-\[7\%\] {
     padding-top: 7%;
   }
@@ -2331,6 +2438,18 @@ html {
 
   .md\:pr-\[12\%\] {
     padding-right: 12%;
+  }
+
+  .md\:pt-28 {
+    padding-top: 7rem;
+  }
+
+  .md\:pr-0 {
+    padding-right: 0px;
+  }
+
+  .md\:pt-\[72px\] {
+    padding-top: 72px;
   }
 
   .md\:text-xl {
@@ -2371,6 +2490,10 @@ html {
     font-size: 26px;
   }
 
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .md\:leading-8 {
     line-height: 2rem;
   }
@@ -2409,6 +2532,10 @@ html {
 }
 
 @media (max-width: 500px) {
+  .ss\:top-72 {
+    top: 18rem;
+  }
+
   .ss\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -2491,16 +2618,16 @@ html {
     margin-top: 0.25rem;
   }
 
+  .ss\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .ss\:ml-\[4\%\] {
     margin-left: 4%;
   }
 
   .ss\:mb-12 {
     margin-bottom: 3rem;
-  }
-
-  .ss\:mt-6 {
-    margin-top: 1.5rem;
   }
 
   .ss\:mb-6 {
@@ -2525,6 +2652,10 @@ html {
 
   .ss\:mb-1 {
     margin-bottom: 0.25rem;
+  }
+
+  .ss\:ml-\[6\%\] {
+    margin-left: 6%;
   }
 
   .ss\:block {
@@ -2559,6 +2690,10 @@ html {
     width: 14%;
   }
 
+  .ss\:w-\[60\%\] {
+    width: 60%;
+  }
+
   .ss\:max-w-\[85\%\] {
     max-width: 85%;
   }
@@ -2569,6 +2704,10 @@ html {
 
   .ss\:basis-\[70\%\] {
     flex-basis: 70%;
+  }
+
+  .ss\:basis-\[98\%\] {
+    flex-basis: 98%;
   }
 
   .ss\:basis-\[90\%\] {
@@ -2585,6 +2724,14 @@ html {
 
   .ss\:flex-col {
     flex-direction: column;
+  }
+
+  .ss\:items-start {
+    align-items: flex-start;
+  }
+
+  .ss\:justify-start {
+    justify-content: flex-start;
   }
 
   .ss\:justify-center {
@@ -2667,9 +2814,9 @@ html {
     line-height: 2.5rem;
   }
 
-  .ss\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .ss\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .ss\:text-2xl {
@@ -2677,9 +2824,9 @@ html {
     line-height: 2rem;
   }
 
-  .ss\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .ss\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .ss\:text-\[1\.75rem\] {
@@ -2692,6 +2839,10 @@ html {
 
   .ss\:leading-\[27px\] {
     line-height: 27px;
+  }
+
+  .ss\:leading-\[20px\] {
+    line-height: 20px;
   }
 
   .ss\:leading-4 {
@@ -2710,6 +2861,10 @@ html {
 @media (max-width: 420px) {
   .sm\:right-\[0\.05rem\] {
     right: 0.05rem;
+  }
+
+  .sm\:top-\[97\%\] {
+    top: 97%;
   }
 
   .sm\:my-0 {
@@ -2897,6 +3052,11 @@ html {
     padding-bottom: 3px;
   }
 
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -2915,11 +3075,6 @@ html {
   .sm\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
-
-  .sm\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
   }
 
   .sm\:pt-2 {
@@ -2990,6 +3145,10 @@ html {
     font-size: 17px;
   }
 
+  .sm\:text-\[38px\] {
+    font-size: 38px;
+  }
+
   .sm\:text-\[13px\] {
     font-size: 13px;
   }
@@ -3018,6 +3177,10 @@ html {
 
   .sm\:leading-\[27px\] {
     line-height: 27px;
+  }
+
+  .sm\:leading-3 {
+    line-height: .75rem;
   }
 
   .sm\:leading-6 {
